# cotter

./: CMakeLists.txt  Dockerfile  README.md  aligned_ptr.h  applysolutionswriter.cpp  applysolutionswriter.h  averagingwriter.h  cotter.cpp  cotter.h  cotter.kdev4  fitswriter.cpp  flagreader.h  flagwriter.cpp  flagwriter.h  forwardingwriter.h  geometry.h  gpufilereader.cpp  gpufilereader.h  lane.h  main.cpp  matrix2x2.h  metafitsfile.cpp  mswriter.cpp  mwaconfig.cpp  mwaconfig.h  mwafits.cpp  mwafits.h  mwainput.h  mwams.cpp  radeccoord.h  slalib.h  solutionfile.h  subbandpassband.cpp  threadedwriter.cpp  threadedwriter.h  version.h
altcotter/: .gitignore  CMakeLists.txt  averagingwriter.cpp  averagingwriter.h  cotter.cpp  cotter.h  fitsuser.cpp  fitsuser.h  fitswriter.h  flagwriter.cpp  flagwriter.h  gpufilereader.h  main.cpp  mwafits.h  mwams.cpp  mwams.h  subbandpassband.h  writer.h
altcotter/data/: .gitignore  make_sb_gains.sh  subband-gains.txt  subband-passband.txt
articles/: .gitignore
articles/2014/Abstract-BASP/: abstract.tex  bib.bib
articles/2014/Article-WSClean/: .gitignore  Response-to-referee.txt  pack-arxiv.sh  pack.sh  proof-corrections.txt  references.bib  wsclean.tex
articles/2014/Article-WSClean/img/: Makefile  dt-casa.txt  dt-wsclean.txt  fit.cpp
articles/2014/MWA-Radio-Environment/: .gitignore  author-list-for-arxiv.txt  extract.sh  mn2e.bst  mwa-radio-environment.tex  mwa-radio-environment.txt  pack-arxiv.sh  pasa.cls  references.bib  response-to-referee.txt
articles/2014/MWA-Radio-Environment/img/: .gitignore  2014-03-17-GLEAM-dvb.txt  Makefile  dvb-2014-03-17.plt
articles/2014/Proposal-MWA-radio-environment/: .gitignore  MWAProposal-Offringa.odt
articles/Abstract-Gerfeest/: Abstract.txt
articles/Article-RFI-distribution/: .gitignore  Comments Ger paper II.txt  answer2-to-ref.txt  answer3-to-ref.txt  article-rfi-distribution.tex  comments-leon.txt  comments-ref1.txt  comments-ref2.txt  comments-stappers1.txt  comments-stappers2.txt  general-changes.txt  gers-referee-commentaar.txt  mn2e-custom.cls  mn2e.bst  pack-arxiv.sh  pack.sh  referee1-report-changes.txt  references.bib
articles/Article-RFI-distribution/authorlist/: Institutes  authorlist-arxiv.py  authorlist-mnras.py  authorlist.py  authors_corrected  make.sh  offringa_author
articles/Article-RFI-distribution/img/Histograms-raw/: hba-histogram-raw-data.txt  hba-nonrfi-raw-data.txt  hba-rfi-raw-data.txt  (+4 more)
articles/Article-compression/: .gitignore  Calculations dithering.txt  compression.tex  compressrefs.bib  ref-assessment.txt  references.bib
articles/Proposal-wsclean/: paper-proposal-fast-widefield-imager.tex
articles/Report-D0002/: references.bib  report-d0002-RFI-analysis.tex
articles/Report-MWA-Beam/: mwa-beam.tex
articles/Report-Noise/: noise-vs-integration.ps  noise-vs-integrationtime-data.txt  noise-vs-integrationtime-data2.txt  noise-vs-integrationtime.plt
articles/Report-Thoughts/: thoughts.tex
articles/SIR-operator-vdGronde/: remarks.txt
chgcentre/: CMakeLists.txt  banddata.h  chgcentre.kdev4  imagecoordinates.h  main.cpp  radeccoord.h
chgcentre/pack/: .gitignore  pack.sh
compress/: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  bytepacker.h  compress.cpp  compress.kdev4  dynamicgausencoder.h  gausencoder.cpp  gausencoder.h  offringacomplexcol.cpp  offringacomplexcol.h  offringastman.cpp  offringastman.h  offringastmancol.h  offringastmanerror.h  offringaweightcol.cpp  offringaweightcol.h  package.dox  register.cpp  register.h  rmscollector.h  rmsdiff.cpp  rmstable.cpp  rmstable.h  simcompress.cpp  stopwatch.h  test.cpp  thread.h  weightencoder.h
cotter/: .gitignore  CMakeLists.txt  averagingmswriter.cpp  averagingmswriter.h  averagingwriter.h  baselinebuffer.h  cotter.cpp  cotter.h  cotter.kdev4  fitsuser.cpp  fitsuser.h  fitswriter.cpp  fitswriter.h  fixmwams.cpp  flagreader.h  flagwriter.cpp  flagwriter.h  forwardingwriter.h  geometry.h  gpufilereader.cpp  gpufilereader.h  lane.h  main.cpp  metafitsfile.cpp  metafitsfile.h  mswriter.cpp  mswriter.h  mwaconfig.cpp  mwaconfig.h  mwafits.cpp  mwainput.h  mwams.cpp  mwams.h  mwatoms.kdev4  numberlist.h  progressbar.cpp  progressbar.h  radeccoord.h  subbandpassband.cpp  subbandpassband.h  (+4 more)
cotter/data/: subband-gains.txt  subband-passband-32ch-unitary.txt
cotter4/: .gitignore  CMakeLists.txt  baselinebuffer.h  cotter.h  fitswriter.h  flagwriter.cpp  flagwriter.h  lane.h  main.cpp  mswriter.cpp  progressbar.cpp  threadedwriter.cpp  threadedwriter.h  version.h  writer.h
data/: convert_avgxyyx_to_code.cpp  make_code.sh
doc/: MappingFitsToMS.txt
example-strategies/: cotter4-mwa-default.rfis  cotter4-mwa-use-preflags.rfis
offringastman/: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  bytepacker.h  compress.cpp  decompress.cpp  gausencoder.cpp  gausencoder.h  offringacomplexcol.cpp  offringacomplexcol.h  offringastman.cpp  offringastman.h  offringastmancol.h  offringaweightcol.cpp  offringaweightcol.h  package.dox  plot-dist.plt  rmscollector.cpp  rmstable.cpp  rmstable.h  stmanmodifier.h  thread.h  weightencoder.h
pbs-scripts/: clear_scripts.sh  killall.sh  pbs-header-arr.txt  pbs-header.txt  queue-applycal.sh  queue-calibrate.sh  queue-dec18.6.sh  queue-expuvfits.sh  queue-imaging.sh  queue-polimage.sh  queue-selfcal.sh  queue-spectrum.sh  queue-subtract.sh
ps/: .gitignore  CMakeLists.txt  channeltransform.h  fft2d.cpp  fft2d.h  fitsreader.cpp  fitsreader.h  fitswriter.cpp  fitswriter.h  gnuplot.h  imagecoordinates.h  matrix2x2.h  nlplfitter.cpp  nlplfitter.h  perptransform.h  polarizationenum.h  psdatafile.h  psfitfg.cpp  psplot.cpp  pstransform.cpp  psweight.cpp  radeccoord.h  universe.h  windowfunction.h
ps/plot/: colormap.h  colorscale.cpp  colorscale.h  date.h  dimension.h  horizontalplotscale.cpp  horizontalplotscale.h  plotable.h  pswidget.cpp  pswidget.h  system.h  tickset.h  title.cpp  title.h  verticalplotscale.cpp  verticalplotscale.h
ps/scripts/: beamcube.sh  weightcube.sh
uvector/: .gitignore  CMakeLists.txt  Doxyfile.in  Timings.ods  main.cpp  tcompare.cpp  uvector.h
(+186 files in other folders)
